--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,19 +1,1 @@
-[
-    {
-        "family": "Museo",
-        "fonts": [
-            {
-                "asset": "fonts/MuseoSans-100.otf"
-            },
-            {
-                "asset": "fonts/MuseoSans-300.otf"
-            },
-            {
-                "asset": "fonts/MuseoSans_500.otf"
-            },
-            {
-                "asset": "fonts/MuseoSans_700.otf"
-            }
-        ]
-    }
-]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"packages/cupertino_icons/CupertinoIcons","fonts":[{"asset":"packages/cupertino_icons/assets/CupertinoIcons.ttf"}]},{"family":"packages/font_awesome_flutter/FontAwesomeBrands","fonts":[{"weight":400,"asset":"packages/font_awesome_flutter/lib/fonts/fa-brands-400.ttf"}]},{"family":"packages/font_awesome_flutter/FontAwesomeRegular","fonts":[{"weight":400,"asset":"packages/font_awesome_flutter/lib/fonts/fa-regular-400.ttf"}]},{"family":"packages/font_awesome_flutter/FontAwesomeSolid","fonts":[{"weight":900,"asset":"packages/font_awesome_flutter/lib/fonts/fa-solid-900.ttf"}]}]
